examples/basic/invalid/invalid_lexical_1.scm
; Erro léxico: uso de @ que não é um caractere válido em Scheme
(define x 10)
(define y @invalido)
(display x)
